--- a/css/reset.css
+++ b/css/reset.css
@@ -53,4 +53,4 @@ img {width: 100%;}
 .mt45 {margin-top: 45px !important;}
 .mt50 {margin-top: 50px !important;}
 
-.mtb90 {margin: 90px 0;}
+.mb90 {margin: 90px 0;}
