--- a/css/style.css
+++ b/css/style.css
@@ -552,6 +552,7 @@ nav ul li:hover a {
     margin-left: 25px;
     color: #03658C;
     font-size: 18px;
+    word-break: keep-all;
 }
 
 .skill_box .box2 .skill_text {
