--- a/css/swiper-bundle.css
+++ b/css/swiper-bundle.css
@@ -340,6 +340,16 @@ button.swiper-pagination-bullet {
     height: 21px;
   }
 }
+@keyframes liner2 {
+  0% {
+    width: 0px;
+    height: 0px;
+  }
+  100% {
+    width: 15px;
+    height: 15px;
+  }
+}
 .swiper-vertical > .swiper-pagination-bullets,
 .swiper-pagination-vertical.swiper-pagination-bullets {
   right: 10px;
@@ -636,4 +646,10 @@ button.swiper-pagination-bullet {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   overflow: hidden;
+}
+
+@media (max-width: 600px) {
+  .swiper-pagination-bullet {width: 10px; height: 10px;}
+  .swiper-pagination-bullet-active:after {width: 15px; height: 15px; animation: liner2 .3s;}
+  :root {--swiper-navigation-size: 13px;}
 }
