--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,13 @@ html, body {
 }
 
 /* .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
     background: rgba(0,0,0,0.2);
 } */
 
 .content {
+    max-width: 1219px;
     height: 100%;
     padding-left: 300px;
 }
@@ -681,25 +682,43 @@ nav ul li:hover a {
 
 /* 디자인 */
 #design {
-    height: 500px;
+    height: 741px;
+    margin-bottom: 90px;
 }
 
 #design h2 {
     padding-top: 170px;
 }
 
-.design_box {
-    width: 100%;
-}
-
 .design_box div {
+    position: relative;
     float: left;
-    width: 25%;
-    height: 25%;
+    width: 24%;
+    height: 24%;
+    margin-right: 1%;
     overflow: hidden;
 }
 
-.design_box div img {
+.design_box div.img4,
+.design_box div.img8 {
+    margin-right: 0;
+}
+
+.design_box div a img {
+    display: block;
+}
+
+
+.design_box div .icon {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    width: 40px;
+    height: 40px;
+}
+
+.design_box div .icon img {
+    width: 100%;
 }
 
 
