--- a/css/style.css
+++ b/css/style.css
@@ -682,7 +682,9 @@ nav ul li:hover a {
 
 /* 디자인 */
 #design {
-    height: 741px;
+    width: 100%;
+    /* height: 900px; */
+    height: 100%;
     margin-bottom: 90px;
 }
 
@@ -690,26 +692,71 @@ nav ul li:hover a {
     padding-top: 170px;
 }
 
-.design_box div {
+.design_box .item {
     position: relative;
     float: left;
     width: 24%;
     height: 24%;
-    margin-right: 1%;
+    margin-right: 1.3%;
+    box-sizing: border-box;
     overflow: hidden;
 }
 
-.design_box div.img4,
-.design_box div.img8 {
+.design_box .item:nth-child(1),
+.design_box .item:nth-child(2),
+.design_box .item:nth-child(3),
+.design_box .item:nth-child(4) {
+    margin-bottom: 1.3%;
+}
+
+.design_box .item:nth-child(4),
+.design_box .item:nth-child(8) {
     margin-right: 0;
 }
 
-.design_box div a img {
+.design_box .item:after {
+    content: "";
     display: block;
+    padding-bottom: 100%;
 }
 
+.design_box .item a {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
 
-.design_box div .icon {
+.design_box .item a img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 124%;
+    display: block;
+    transition: all .3s ease-in-out;
+}
+
+.design_box .img3 a img {
+    width: 150%;
+}
+
+.design_box .img4 a img {
+    width: 180%;
+}
+
+.design_box .item:hover img {
+    width: 128%;
+}
+
+.design_box .img3:hover a .pin {
+    width: 155%;
+}
+
+.design_box .img4:hover a .pin {
+    width: 185%;
+}
+
+.design_box .item .icon {
     position: absolute;
     right: 10px;
     bottom: 10px;
@@ -717,11 +764,20 @@ nav ul li:hover a {
     height: 40px;
 }
 
-.design_box div .icon img {
+.design_box .item .icon img {
     width: 100%;
 }
 
+.design_box .item .icon2 {
+    position: absolute;
+    right: 10px;
+    bottom: 28px;
+    width: 85px;
+}
 
+.design_box .item .icon2 img {
+    width: 100%;
+}
 
 /* 연락 */
 #contact {
@@ -795,6 +851,11 @@ nav ul li:hover a {
     .slider .swiper-slide .slide_text .slide_tit p {text-align: center;}
     .slider .swiper-slide .slide_text .slide_btn a {display: block;}
     .slider .swiper-slide .slide_text .slide_btn .work {width: 124px; text-align: center; margin-top: 10px;}
+
+    .design_box .item {width: 49%; height: 49%; margin-right: 2%;}
+    .design_box .item:nth-child(2), .design_box .item:nth-child(4), .design_box .item:nth-child(6), .design_box .item:nth-child(8) {margin-right: 0;}
+    .design_box .item:nth-child(1), .design_box .item:nth-child(2), .design_box .item:nth-child(3), .design_box .item:nth-child(4) {margin-bottom: 0;}
+    .design_box .item:nth-child(3), .design_box .item:nth-child(4), .design_box .item:nth-child(5), .design_box .item:nth-child(6), .design_box .item:nth-child(7), .design_box .item:nth-child(8) {margin-top: 2%;}
 }
 
 @media (max-width: 600px) {
@@ -826,6 +887,7 @@ nav ul li:hover a {
     .slider .swiper-slide .slide_text .slide_btn .site {width: 111px;}
     .slider .swiper-slide .slide_text .slide_btn .work {width: 111px;}
     
+    #design h2 {padding-top: 70px;}
 }
 
 @media (max-width: 400px) {
@@ -845,4 +907,9 @@ nav ul li:hover a {
     .skill_box .box .skill_text {font-size: 14px;}
 
     .slider .swiper-slide .mockup_img {width: 325px;}
+
+    .design_box .item .icon {width: 30px; height: 30px;}
+    .design_box .item .icon2 {width: 65px; bottom: 25px;}
+
+    #design h2 {padding-top: 30px;}
 }
