--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ aside {
     padding: 0 70px;
     box-sizing: border-box;
     background: #03658C;
+    box-shadow: 0 1px 3px rgb(48, 48, 48);
     z-index: 20;
 }
 
@@ -816,6 +817,7 @@ nav ul li:hover a {
 .address_box .btn {
     background-color: #03658C;
     color: #fff;
+    border-radius: 3px;
     cursor: pointer;
 }
 
@@ -823,7 +825,8 @@ address {
     text-align: center;
     font-size: 14px;
     color:#03658C;
-    padding: 50px 0;
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
 /* 반응형 */
