--- a/css/style.css
+++ b/css/style.css
@@ -815,9 +815,10 @@ nav ul li:hover a {
 }
 
 .address_box .btn {
+    padding: none;
     background-color: #03658C;
     color: #fff;
-    border-radius: 3px;
+    border-radius: 5px;
     cursor: pointer;
 }
 
