--- a/css/style.css
+++ b/css/style.css
@@ -685,94 +685,46 @@ nav ul li:hover a {
 /* 디자인 */
 #design {
     width: 100%;
-    height: 100%;
 }
 
-.design_box .item {
+.design_box a {
     position: relative;
     float: left;
     width: 24%;
     height: 24%;
+    display: block;
+    margin-top: 1%;
     margin-right: 1.3%;
-    box-sizing: border-box;
     overflow: hidden;
 }
 
-.design_box .item:nth-child(1),
-.design_box .item:nth-child(2),
-.design_box .item:nth-child(3),
-.design_box .item:nth-child(4) {
-    margin-bottom: 1.3%;
-}
-
-.design_box .item:nth-child(4),
-.design_box .item:nth-child(8) {
+.design_box a:nth-child(4),
+.design_box a:nth-child(8) {
     margin-right: 0;
 }
 
-.design_box .item:after {
-    content: "";
-    display: block;
-    padding-bottom: 100%;
-}
-
-.design_box .item a {
-    position: absolute;
+.design_box a .move {
     width: 100%;
-    height: 100%;
-}
-
-.design_box .item a img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 124%;
     display: block;
     transition: all .3s ease-in-out;
 }
 
-.design_box .img3 a img {
-    width: 150%;
+.design_box a:hover .move {
+    transform: scale(1.1);
 }
 
-.design_box .img4 a img {
-    width: 180%;
-}
-
-.design_box .item:hover img {
-    width: 130%;
-}
-
-.design_box .img3:hover a .pin {
-    width: 157%;
-}
-
-.design_box .img4:hover a .pin {
-    width: 187%;
-}
-
-.design_box .item .icon {
+.design_box a .icon {
     position: absolute;
+    width: 40px;
     right: 10px;
     bottom: 10px;
-    width: 40px;
-    height: 40px;
 }
 
-.design_box .item .icon img {
-    width: 100%;
-}
-
-.design_box .item .icon2 {
+.design_box a .icon2 {
     position: absolute;
+    width: 90px;
     right: 10px;
-    bottom: 28px;
-    width: 85px;
-}
-
-.design_box .item .icon2 img {
-    width: 100%;
+    bottom: 10px;
 }
 
 /* 연락 */
@@ -894,10 +846,8 @@ address {
     .slider .swiper-slide .slide_text .slide_btn a {display: block;}
     .slider .swiper-slide .slide_text .slide_btn .work {width: 124px; text-align: center; margin-top: 10px;}
 
-    .design_box .item {width: 49%; height: 49%; margin-right: 2%;}
-    .design_box .item:nth-child(2), .design_box .item:nth-child(4), .design_box .item:nth-child(6), .design_box .item:nth-child(8) {margin-right: 0;}
-    .design_box .item:nth-child(1), .design_box .item:nth-child(2), .design_box .item:nth-child(3), .design_box .item:nth-child(4) {margin-bottom: 0;}
-    .design_box .item:nth-child(3), .design_box .item:nth-child(4), .design_box .item:nth-child(5), .design_box .item:nth-child(6), .design_box .item:nth-child(7), .design_box .item:nth-child(8) {margin-top: 2%;}
+    .design_box a {width: 49%; height: 49%; margin-top: 2%; margin-right: 2%;}
+    .design_box a:nth-child(2n) {margin-right: 0;}
 }
 
 @media (max-width: 600px) {
@@ -953,8 +903,8 @@ address {
     .slider .swiper-slide .mockup_img {width: 325px;}
     .slider .swiper-slide .slide_text:after {top: -70px;}
 
-    .design_box .item .icon {width: 30px; height: 30px;}
-    .design_box .item .icon2 {width: 65px; bottom: 25px;}
+    .design_box a .icon {width: 30px;}
+    .design_box a .icon2 {width: 65px;}
 
     address {font-size: 12px;}
 }
