--- a/web_portfolio/sub1/css/style.css
+++ b/web_portfolio/sub1/css/style.css
@@ -196,6 +196,7 @@ footer address {
 
     .mockup img {margin-top: -45px;}
 
+    .explain dl {padding: 0 16px;}
     .explain dl dt {font-size: 18px;}
     .explain dl dd {font-size: 16px;}
 
@@ -205,9 +206,11 @@ footer address {
 
 @media (max-width: 400px) {
     header .tit {font-size: 16px;}
+    header .tit p {font-size: 16px;}
+    header .tit h1 {font-size: 25px;}
 
     header .btn {font-size: 25px;}
-    header .btn a {font-size: 14px;}
+    header .btn a {font-size: 12px;}
 
     .explain dl dt {font-size: 16px;}
     .explain dl dd {font-size: 14px;}
