--- a/web_portfolio/sub1/css/style.css
+++ b/web_portfolio/sub1/css/style.css
@@ -171,9 +171,40 @@ footer address {
     color: #fff;
 }
 
+/* 탑 버튼 */
+.top_btn {
+    position: fixed;
+    top: auto;
+    right: 50px;
+    bottom: 50px;
+}
+
+.top_btn a {
+    position: relative;
+    display: block;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #05A0A3;
+    transition: all .3s ease-in-out;
+}
+
+.top_btn a:hover {
+    background: #D9471A;
+}
+
+.top_btn a svg {
+    position: absolute;
+    top: 49%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
 /* 미디어 쿼리 */
 @media (max-width: 1024px) {
     .container {width: 100%;}
+
+    .top_btn {right: 24px;}
 }
 
 @media (max-width: 840px) {
@@ -202,6 +233,10 @@ footer address {
 
     footer {height: 100px;}
     footer address {font-size: 14px; line-height: 100px;}
+
+    .top_btn {right: 16px;}
+    .top_btn a {width: 40px; height: 40px;}
+    .top_btn a svg {width: 18px;}
 }
 
 @media (max-width: 400px) {
@@ -212,8 +247,11 @@ footer address {
     header .btn {font-size: 25px;}
     header .btn a {font-size: 12px;}
 
+    .explain dl {padding: 0 8px;}
     .explain dl dt {font-size: 16px;}
     .explain dl dd {font-size: 14px;}
 
     footer address {font-size: 12px;}
+
+    .top_btn {right: 8px;}
 }
