--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ aside {
     position: relative;
     display: inline-block;
     text-align: left;
-    margin: 60px auto;
+    margin: 60px auto 80px;
 }
 
 .aside_box h1 a {
@@ -81,7 +81,7 @@ aside {
 
 nav ul li {
     position: relative;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
 }
 
 nav ul li a {
@@ -103,7 +103,7 @@ nav ul li:hover a {
     text-shadow: 3px 3px #D9471A;
 }
 
-.mode_switch {
+/* .mode_switch {
     margin-top: 40px;
 }
 
@@ -163,7 +163,7 @@ nav ul li:hover a {
     background: url(../img/moon.png) no-repeat center;
     background-size: 18px;
     background-color: #fff;
-}
+} */
 
 .mBtn {
     position: relative;
@@ -236,7 +236,7 @@ nav ul li:hover a {
 }
 
 .m_menu nav ul li {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .m_back {
@@ -887,6 +887,8 @@ address {
     .skill_box .box .circle {margin-bottom: 30px;}
     .skill_box .box .skill_text {margin-left: 0; text-align: center;}
     .skill_box .box2 .skill_text {margin-right: 0;}
+
+    .top_btn {right: 24px;}
 }
 
 @media (max-width: 840px) {
@@ -935,6 +937,10 @@ address {
     .slider .swiper-slide .slide_text .slide_btn .work {width: 111px;}
     
     .address_box {width: 100%;}
+
+    .top_btn {right: 16px;}
+    .top_btn a {width: 45px; height: 45px;}
+    .top_btn a svg {width: 18px;}
 }
 
 @media (max-width: 400px) {
@@ -966,4 +972,6 @@ address {
     .design_box a .blue_back p {font-size: 20px;}
 
     address {font-size: 12px;}
+
+    .top_btn {right: 8px;}
 }
