--- a/css/style.css
+++ b/css/style.css
@@ -61,18 +61,26 @@ aside {
 }
 
 .aside_box h1 {
+    height: 250px;
     position: relative;
     display: inline-block;
     text-align: left;
-    margin: 60px auto 80px;
 }
 
 .aside_box h1 a {
     font-size: 40px;
     font-weight: bold;
+    display: block;
     line-height: 40px;
     color: #fff;
     text-shadow: 4px 4px #D9471A;
+}
+
+.aside_box h1 a.pc_logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .aside_box h1 a.m_logo {
@@ -859,7 +867,7 @@ address {
 
     aside {width: 100%; height: 70px; padding: 0 24px;}
     .aside_box {width: 100%; height: 70px; flex-direction: row; justify-content: space-between; align-items: center;}
-    .aside_box h1 {margin: 0;}
+    .aside_box h1 {height: 38px;}
     .aside_box h1 a.pc_logo {display: none;}
     .aside_box h1 a.m_logo {display: block; font-size: 35px;}
     .aside_box .pc_menu {display: none;}
