--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ nav ul li:hover a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     text-align: center;
 }
 
