--- a/css/style.css
+++ b/css/style.css
@@ -584,7 +584,6 @@ nav ul li:hover a {
 #portfolio {
     width: 100%;
     height: 660px;
-    overflow: hidden;
 }
 
 .slider {
@@ -597,6 +596,10 @@ nav ul li:hover a {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    display: -ms-flexbox;
+    -ms-flex-direction: column;
+    -ms-flex-align: center;
+    -ms-flex-pack: justify;
 }
 
 .slider .swiper-slide .mockup_img {
